# scmert

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/scmert/: CMakeLists.txt  initd.py  scmert.py
libs/python/: CMakeLists.txt
libs/python/mert/: __init__.py  process.py
libs/python/mert/stream2segment/: traces.py
